# scap-gstreamer

./: Cargo.toml  README.md  build.rs  flake.nix
examples/: preview.rs  preview_programmatic.rs  save_to_file.rs
src/: lib.rs
src/scapsrc/: imp.rs  mod.rs
